--- a/projecten.css
+++ b/projecten.css
@@ -55,23 +55,54 @@ body {
 }
 
 .button4 {
+    display: flex;
+    justify-content: center;
     background-image: url('RG.png');
     background-repeat: no-repeat;
+    background-size: contain;
     width: 260px;
     height: 135px;
-    margin-left: 250px;
+    margin-left: 20px;
+    padding-left: 95%;
     text-align: center;
     font-size: 15px;
     color: rgb(32, 7, 124);
+    border-radius: 25px;
+}
+
+.row {
+    display: flex;
 }
 
 .button5 {
-    background-color: #2694fc;
-    width: 230px;
-    height: 160px;
-    margin-left: 480px;
+    background-image: url('wulfies.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100px;
+    height: 70px;
+    margin-left: 20px;
+    padding-left: 95%;
     text-align: center;
     font-size: 15px;
+    color: rgb(32, 7, 124);
+    border-radius: 25px;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.row {
+    display: flex;
+}
+
+
+/* Create three equal columns that sits next to each other */
+
+.column {
+    float: left;
+    flex: 33.3%;
+    padding: 5px;
 }
 
 .button6 {
@@ -92,6 +123,7 @@ body {
     margin-right: 229px;
     height: 435px;
     width: 678px;
+    border-radius: 25px;
 }
 
 h2 {
@@ -111,8 +143,53 @@ h1 {
     color: black;
 }
 
+.row .column .rg img {
+    padding-top: 25px;
+    margin-left: 200px;
+}
+
+.row .column .wulfies img {
+    margin-left: 300px;
+}
+
 p {
     font-family: 'poppins';
     font-size: 25px;
     text-align: center;
 }
+
+@media screen and (max-width :690px) {
+    .flexbox-container {
+        background-color: #f2f2f2;
+        background-size: cover;
+        box-shadow: 0 5px, 15px rgba(0, 0, 0, .5);
+        margin-top: 50px;
+        margin-left: 100px;
+        margin-right: 129px;
+        height: 335px;
+        width: 478px;
+        border-radius: 25px;
+    }
+    .row .column .rg img {
+        padding-top: 25px;
+        margin-left: 20px;
+    }
+    .row .column .wulfies img {
+        margin-left: 30px;
+    }
+    h1 {
+        padding-left: 160px;
+        padding-top: 50px;
+        font-family: 'poppins';
+        font-weight: 1000;
+        font-size: 37px;
+        color: black;
+    }
+    p {
+        font-family: 'poppins';
+        font-size: 20px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width :690px) {}
