--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 .topnav {
     overflow: hidden;
     background-color: rgb(32, 7, 124);
+    width: 100%;
 }
 
 .topnav a {
@@ -69,4 +70,73 @@ p {
     font-family: 'poppins';
     font-size: 25px;
     text-align: center;
+}
+
+@media screen and (max-width :690px) {
+    .flexbox-container {
+        background-image: url(sem-thijssen.jpeg);
+        background-size: cover;
+        box-shadow: 0 5px, 15px rgba(0, 0, 0, .5);
+        margin-right: 229px;
+        margin-left: 120px;
+        height: 235px;
+        width: 478px;
+    }
+    .topnav {
+        overflow: hidden;
+        background-color: rgb(32, 7, 124);
+        width: 100%;
+    }
+    .topnav a {
+        float: left;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 23px 25px;
+        text-decoration: none;
+        font-size: 16px;
+    }
+    .topnav a:hover {
+        background-color: #BDD9F5;
+        color: black;
+    }
+    .topnav a.active {
+        background-color: #0084ff;
+        color: white;
+    }
+    .button3 {
+        background-color: rgb(32, 7, 124);
+    }
+    .flexbox-container {
+        margin: auto;
+        justify-content: center;
+    }
+    .flexbox-container {
+        background-image: url(sem-thijssen.jpeg);
+        background-size: cover;
+        box-shadow: 0 5px, 15px rgba(0, 0, 0, .5);
+        margin-top: 50px;
+        margin-left: 389px;
+        margin-right: 229px;
+        height: 435px;
+        width: 678px;
+    }
+    h2 {
+        padding-left: 650px;
+        font-family: 'poppins';
+        font-weight: 1000;
+        font-size: 37px;
+        color: black;
+    }
+    h1 {
+        padding-left: 400px;
+        font-family: 'poppins';
+        font-weight: 1000;
+        font-size: 37px;
+        color: black;
+    }
+    p {
+        font-family: 'poppins';
+        font-size: 25px;
+        text-align: center;
+    }
 }
