--- a/style.css
+++ b/style.css
@@ -140,3 +140,30 @@ p {
         text-align: center;
     }
 }
+
+@media screen and (max-width :690px) {
+    .flexbox-container {
+        background-image: url(sem-thijssen.jpeg);
+        background-size: cover;
+        box-shadow: 0 5px, 15px rgba(0, 0, 0, .5);
+        margin-top: 50px;
+        margin-left: 0px;
+        margin-right: 99px;
+        height: 335px;
+        width: 100%;
+    }
+    h1 {
+        padding-left: 425px;
+        font-family: 'poppins';
+        font-weight: 1000;
+        font-size: 37px;
+        color: black;
+    }
+    h2 {
+        padding-left: 278px;
+        font-family: 'poppins';
+        font-weight: 1000;
+        font-size: 37px;
+        color: black;
+    }
+}
