--- a/overmij.css
+++ b/overmij.css
@@ -97,3 +97,20 @@ p {
         padding-top: 50px;
     }
 }
+
+@media screen and (width :768px) {
+    .flexbox-container {
+        box-shadow: 0 5px, 15px rgba(0, 0, 0, .5);
+        margin-top: 50px;
+        margin-left: 180px;
+        margin-right: 99px;
+        height: 335px;
+        width: 478px;
+    }
+    img {
+        height: 450px;
+        width: 100%;
+        padding-left: 0px;
+        padding-top: 50px;
+    }
+}
