--- a/projecten.css
+++ b/projecten.css
@@ -192,4 +192,36 @@ p {
     }
 }
 
-@media screen and (max-width :690px) {}
+@media screen and (width :768px) {
+    .flexbox-container {
+        background-color: #f2f2f2;
+        background-size: cover;
+        box-shadow: 0 5px, 15px rgba(0, 0, 0, .5);
+        margin-top: 50px;
+        margin-left: 150px;
+        margin-right: 129px;
+        height: 335px;
+        width: 478px;
+        border-radius: 25px;
+    }
+    .row .column .rg img {
+        padding-top: 25px;
+        margin-left: 30px;
+    }
+    .row .column .wulfies img {
+        margin-left: 40px;
+    }
+    h1 {
+        padding-left: 160px;
+        padding-top: 50px;
+        font-family: 'poppins';
+        font-weight: 1000;
+        font-size: 37px;
+        color: black;
+    }
+    p {
+        font-family: 'poppins';
+        font-size: 20px;
+        text-align: center;
+    }
+}
