--- a/projecten.css
+++ b/projecten.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin: 0;
     padding: 0;
     background: #BDD9F5;
@@ -99,7 +99,8 @@ body {
 
 /* Create three equal columns that sits next to each other */
 
-.column {
+
+/* .column {
     float: left;
     flex: 33.3%;
     padding: 5px;
@@ -224,4 +225,4 @@ p {
         font-size: 20px;
         text-align: center;
     }
-}
+} */
