--- a/wulfies.css
+++ b/wulfies.css
@@ -1,13 +1,13 @@
 body {
     margin: 0;
     padding: 0;
-    background: #BDD9F5;
+    background: #022141;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .topnav {
     overflow: hidden;
-    background-color: rgb(32, 7, 124);
+    background-color: #022141;
 }
 
 .topnav a {
@@ -30,7 +30,7 @@ body {
 }
 
 .button3 {
-    background-color: rgb(32, 7, 124);
+    background-color: #022141;
 }
 
 .portfolio-image {
@@ -67,6 +67,13 @@ img {
     padding-top: 50px;
 }
 
+p1 {
+    font-family: 'poppins';
+    font-size: 20px;
+    text-align: center;
+    color: black;
+}
+
 h1 {
     padding-left: 400px;
     font-family: 'poppins';
@@ -100,7 +107,7 @@ p {
 }
 
 .button1 {
-    background-color: #4CAF50;
+    background-color: white;
 }
 
 .flexbox-container3 {
