--- a/overmij.css
+++ b/overmij.css
@@ -62,9 +62,10 @@ h2 {
 }
 
 img {
-    height: 450px;
-    padding-left: 340px;
-    padding-top: 50px;
+    height: 400px;
+    width: 400px;
+    padding-left: 500px;
+    padding-bottom: 100px;
 }
 
 h1 {
@@ -75,13 +76,36 @@ h1 {
     color: white
 }
 
+.open-button {
+    background: #0084ff;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    bottom: 273px;
+    right: 590px;
+    width: 280px;
+  }
+  .open-button:hover{
+    background: #0070c0;
+  }
+  .open-button:active{
+    background: #015c9d;
+  }
 p {
     font-family: 'poppins';
     font-size: 25px;
     text-align: center;
     color: white;
 }
-
+p1{
+    font-family: 'poppins';
+    font-size: 15px;
+    text-align: center;
+    color: white;
+}
 @media screen and (max-width :690px) {
     .flexbox-container {
         box-shadow: 0 5px, 15px rgba(0, 0, 0, .5);
