--- a/interactieve_speeltuin.css
+++ b/interactieve_speeltuin.css
@@ -143,7 +143,7 @@ h1 {
 }
 
 p {
-    padding-top: 11px;
+    padding-top: 65px;
     font-family: 'poppins';
     font-size: 25px;
     text-align: center;
@@ -166,20 +166,24 @@ color: white;
 }
 
 .text-container{
-    background-color: white;
+    background-color:white;
     width: 500px;
     height: 400px;
     align-items: center;
     justify-content: center;
     margin-top: 300px;
+   
+    color: black
 }
 .text-container2{
-    background-color: white;
+    background-color:white;
     width: 500px;
     height: 400px;
     align-items: center;
     justify-content: center;
-    margin-top: 00px;
+    margin-top: 0px;
+  
+    color: black;
 }
 
    
@@ -292,20 +296,33 @@ color: white;
     display: flex;
 }
 }
-@media screen and (width :768px) {
-    .flexbox-container {
-        box-shadow: 0 5px, 15px rgba(0, 0, 0, .5);
-        margin-top: 50px;
-        margin-left: 180px;
-        margin-right: 99px;
-        height: 335px;
-        width: 478px;
+@media screen and (max-width :376px) {
+    body {
+        margin: 0;
+        padding: 0;
+        background: #022141;
+        font-family: Arial, Helvetica, sans-serif;
     }
-    img {
-        height: 450px;
-        width: 100%;
-        padding-left: 0px;
-        padding-top: 50px;
+    .flexbox-container3 {
+        border-top: 100px;
+        border-color: #0084ff;
+        height: 350px;
+        background-color: white;
+        margin-left: 137px;
+        margin-right: 280px;
+        width: 870px;
     }
-  
+    img{ 
+        height: 400px;
+        width: 800px;
+        padding-left: 179px;
+        padding-bottom: 10px;}
+        .topnav a {
+            float: left;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 34px 34px;
+            text-decoration: none;
+            font-size: 17px;
+        }
 }
