--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ h4{ font-family: 'poppins';
         margin-bottom: 0;
         font-family: 'poppins';
         font-size: 25px;
-        margin-right: 16.1rem;
+        margin-left: 0.1rem;
 
      }
      .footer-heading a{
@@ -262,125 +262,92 @@ h4{ font-family: 'poppins';
         background-color: skyblue;
         transition: all 0.4s ease-out;
     }
-@media screen and (max-width :690px) {
+    .email{
+        margin-left: 800px;
+        margin-bottom: 80px;
+       border: none;
+    }
+    .bericht{
+        padding: 3px;
+       
+        border-radius: 1px;
+        border: none;
+        
+    }
+    
+@media screen and (max-width :376px) {
     .flexbox-container {
-        background-image: url(sem-thijssen.jpeg);
-        background-size: cover;
-        box-shadow: 0 5px, 15px rgba(0, 0, 0, .5);
-        margin-right: 229px;
-        margin-left: 120px;
-        height: 235px;
-        width: 478px;
-    }
-    .topnav {
-        overflow: hidden;
-        background-color: rgb(32, 7, 124);
-        width: 100%;
-    }
-    .topnav a {
-        float: left;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 23px 25px;
-        text-decoration: none;
-        font-size: 16px;
-    }
-    .topnav a:hover {
-        background-color: #BDD9F5;
-        color: black;
-    }
-    .topnav a.active {
-        background-color: #0084ff;
-        color: white;
-    }
-    .button3 {
-        background-color: rgb(32, 7, 124);
-    }
-    .flexbox-container {
-        margin: auto;
-        justify-content: center;
-    }
-    .flexbox-container {
-        background-image: url(sem-thijssen.jpeg);
-        background-size: cover;
-        box-shadow: 0 5px, 15px rgba(0, 0, 0, .5);
-        margin-top: 50px;
-        margin-left: 389px;
-        margin-right: 229px;
-        height: 435px;
-        width: 678px;
-    }
-    h2 {
-        padding-left: 650px;
-        font-family: 'poppins';
-        font-weight: 1000;
-        font-size: 37px;
-        color: black;
-    }
-    h1 {
-        padding-left: 400px;
-        font-family: 'poppins';
-        font-weight: 1000;
-        font-size: 37px;
-        color: black;
-    }
-    p {
-        font-family: 'poppins';
-        font-size: 25px;
-        text-align: center;
-    }
-}
-
-@media screen and (max-width :690px) {
-    .flexbox-container {
-        background-image: url(sem-thijssen.jpeg);
-        background-size: cover;
-        box-shadow: 0 5px, 15px rgba(0, 0, 0, .5);
-        margin-top: 50px;
+        border-radius: 75px;
+        position: relative;
+        background-color: #65acee;
         margin-left: 0px;
-        margin-right: 99px;
-        height: 335px;
-        width: 100%;
-    }
-    h1 {
-        padding-left: 425px;
-        font-family: 'poppins';
-        font-weight: 1000;
-        font-size: 37px;
-        color: black;
-    }
-    h2 {
-        padding-left: 278px;
-        font-family: 'poppins';
-        font-weight: 1000;
-        font-size: 37px;
-        color: black;
-    }
-}
-
-@media screen and (width :768px) {
-    .flexbox-container {
-        background-image: url(sem-thijssen.jpeg);
-        background-size: cover;
-        box-shadow: 0 5px, 15px rgba(0, 0, 0, .5);
         margin-top: 50px;
-        margin-left: 0px;
-        margin-right: 99px;
         height: 335px;
-        width: 100%;
+        width: 150%;
+        opacity: 1.5;
     }
-    h1 {
-        padding-left: 510px;
-        font-family: 'poppins';
-        font-weight: 1000;
-        font-size: 37px;
-        color: black;
+    
+    img {
+        position: absolute;
+        top: 120px;
+        max-width: 100%;
+        height: auto;
+        left: 50px;
     }
-    h2 {
-        padding-left: 318px;
-        font-family: 'poppins';
-        font-weight: 1000;
-        font-size: 37px;
-        color: black;
+    h1{
+        padding-left: 350px;
+    padding-top: 45px;
+    font-family: 'poppins';
+    font-weight: 1000;
+   font-size: 30px; 
+    color: black;
     }
-}
+    h2{ font-family: 'poppins';
+        font-size: 20px;
+        text-align: center;}
+        h3{ font-family: 'poppins';
+            font-size: 20px;
+            text-align: center;}
+            .card {
+                width: 550px;
+                height: 400px;
+                    background-color: #BDD9F5;
+                    margin-bottom: 10px;
+                  }
+               
+                .card-image{
+                    background-color: #f2f2f2;
+                    width: 100%;
+                    height: 275px;
+                    margin-bottom: 15px;
+                    background-size: cover;
+                  }
+                  .container {
+                    display: flex;
+                    justify-content: center;
+                    flex-direction: column;
+                    }
+                    .button{
+ 
+                        height: 30px;
+                        width: 180px;
+                        padding:0px;
+                        background: #0084ff;
+                        margin-left: 180px;
+                        margin-top: 10px;
+                        border: none;
+                        outline: none;
+                        border-radius: 5px;
+                        overflow: hidden;
+                        font-family: "poppins";
+                        font-size: 23px;
+                        cursor: pointer;
+                    }
+                    .button__text{
+                        display: inline-flex;
+                        align-items: center;
+                        
+                        
+                        color: white;
+                    }                
+    }
