--- a/contact.css
+++ b/contact.css
@@ -79,7 +79,13 @@ button{
 border-radius:2rem 2rem 2rem 2rem ;
 
     border: none;
-    width: 100%;
+    width: 25%;
     cursor: pointer;
+
+}
+button:hover{
+    padding: 30px 0 ;
+    width: 100%;
+    transition: 0.5s;
 }
 
