--- a/overmij.css
+++ b/overmij.css
@@ -142,6 +142,44 @@ p1{
     text-align: center;
     color: white;
 }
+.footer-container{
+    background-color:#022141;
+    padding-bottom: 4rem;
+}
+.footer{
+     width: 80%;
+     height: 20vh;
+     background-color: #022141;
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-left: 10rem;
+}
+     .footer-heading{
+        display: flex;
+        flex-direction: column;
+        margin-right: 2.5rem;
+     }
+     .footer-heading h2{
+        margin-bottom: 0;
+        font-family: 'poppins';
+        font-size: 25px;
+        margin-left: -39.9rem;
+
+     }
+     .footer-heading a{
+        color: white;
+        text-decoration: none;
+        margin-bottom: 0;
+        font-size: 25px;
+        margin-left: 3rem;
+        margin-top: 1rem;
+     }
+     .footer-heading a:hover{
+        color: red;
+        transition: 0.3s ease-in-out;
+     }
 @media screen and (max-width :690px) {
     .flexbox-container {
         box-shadow: 0 5px, 15px rgba(0, 0, 0, .5);
