--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
 .topnav a:hover {
     background-color: #65acee;
     color: black;
+    transition:  0.5s;
 }
 
 .topnav a.active {
@@ -114,7 +115,7 @@ h2{ font-family: 'poppins';
         height: 30px;
         width: 180px;
         padding:0px;
-        background: #0084ff;
+        background: hsl(209, 100%, 50%);
         margin-left: 120px;
         margin-top: 25px;
         border: none;
@@ -124,6 +125,10 @@ h2{ font-family: 'poppins';
         font-family: "poppins";
         font-size: 23px;
         cursor: pointer;
+    }
+    .button:hover{
+        background-color: hsl(209, 100%, 30%);
+        transition:  0.5s;
     }
     .button__text{
         display: inline-flex;
@@ -185,6 +190,7 @@ h4{ font-family: 'poppins';
     float: left;
     flex: 33.3%;
     padding: 5px;
+    margin-left: -24px;
 }
 *{
     padding: 0;
@@ -197,7 +203,7 @@ h4{ font-family: 'poppins';
 }
 .footer{
      width: 80%;
-     height: 20vh;
+    
      background-color: #022141;
     color: white;
     display: flex;
@@ -219,14 +225,14 @@ h4{ font-family: 'poppins';
      }
      .footer-heading a{
         color: white;
-        text-decoration: none;
+        
         margin-bottom: 0;
-        font-size: 25px;
+        font-size: 18px;
         margin-left: 2rem;
         margin-top: 1rem;
      }
      .footer-heading a:hover{
-        color: red;
+        color: #0084ff;
         transition: 0.3s ease-in-out;
      }
      .footer-email-form h2{
@@ -307,7 +313,7 @@ h4{ font-family: 'poppins';
         text-align: center;}
         h3{ font-family: 'poppins';
             font-size: 20px;
-            text-align: center;}
+            margin-left: -13rem;}
             .card {
                 width: 550px;
                 height: 400px;
