--- a/wulfies.css
+++ b/wulfies.css
@@ -18,6 +18,7 @@ body {
     font-family: "poppins";
     font-size: 25px;
     cursor: pointer;
+    text-decoration: none;
 }
 .button2{
     display: inline-flex;
@@ -116,6 +117,7 @@ img{
     text-align: center;
     font-size: 17px;
     color: white;
+    text-decoration: none;
 }
 h2 {
     padding-left: 650px;
