--- a/contact.css
+++ b/contact.css
@@ -88,4 +88,53 @@ button:hover{
     width: 100%;
     transition: 0.5s;
 }
+.footer-container{
+    background-color:#022141;
+   
+}
+.footer{
+     width: 80%;
+     height: 20vh;
+     background-color: #022141;
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-left: 10rem;
+}
+.footer-heading{
+    display: flex;
+    flex-direction: column;
+    margin-right: 2.5rem;
+ }
+ .footer-heading h2 {
+    margin-bottom: 0;
+    font-family: 'poppins';
+    font-size: 25px;
+    margin-left: 6.100000000000001rem;
+}
 
+
+ .footer-heading a{
+    color: white;
+    text-decoration: underline;
+    margin-bottom: 0;
+    font-size: 18px;
+    margin-left: 3rem;
+    margin-top: 1rem;
+ }
+ .footer-heading a:hover{
+    color: red;
+    transition: 0.3s ease-in-out;
+ }
+ .row {
+    display: flex;
+}
+
+.column {
+    float: left;
+    flex: 33.3%;
+    padding: 5px;
+    margin-left: -17px;
+    margin-right: -1px;
+}
