--- a/style.css
+++ b/style.css
@@ -355,5 +355,11 @@ h4{ font-family: 'poppins';
                         
                         
                         color: white;
-                    }                
+                    }           
+                    .column {
+                        float: left;
+                        flex: 6%;
+                        padding: -5px;
+                        margin-left: -44px;
+                        margin-right: -18px;}     
     }
